--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
 	"private": true,
 	"license": "mit",
 	"dependencies": {
+		"@material-ui/core": "^4.11.3",
+		"@material-ui/icons": "^4.11.2",
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"final-form": "^4.20.1",
+		"firebase": "^8.2.9",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-final-form": "^6.5.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.2",
 		"styled-components": "^5.2.1",
 		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
+		"use-async-effect": "^2.2.3"
 	},
 	"devDependencies": {
 		"@types/react-router-dom": "^5.1.7",
