--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.57",
+		"@material-ui/pickers": "3.2.10",
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"final-form": "^4.20.1",
+		"final-form-arrays": "^3.0.2",
 		"firebase": "^8.2.9",
+		"mui-rff": "^3.0.3",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-final-form": "^6.5.2",
+		"react-final-form-arrays": "^3.1.3",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.2",
 		"styled-components": "^5.2.1",
