--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"final-form-arrays": "^3.0.2",
 		"firebase": "^8.2.9",
 		"mui-rff": "^3.0.3",
+		"ramda": "^0.27.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-final-form": "^6.5.2",
@@ -27,6 +28,7 @@
 		"use-async-effect": "^2.2.3"
 	},
 	"devDependencies": {
+		"@types/ramda": "^0.27.50",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/styled-components": "^5.1.7",
 		"@typescript-eslint/eslint-plugin": "^4.15.1",
